Corrected DG spelling at multiple locations. Commented out data driven section from tutorials.dox.

--- a/tutorials/adv-3/doc/level_set.dox
+++ b/tutorials/adv-3/doc/level_set.dox
@@ -7,7 +7,7 @@
 \note Intended learning outcome:
 - general structure of a program developed using MoFEM
 - integartion on skeleton
-- Upwind Discountinous Galerkin
+- Upwind Discontinuous Galerkin
 - Level-set
 
 \tableofcontents
