add ananya to contributors

--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -40,6 +40,7 @@
   - MD Tanzib Ehsan Sanglap, The University of Glasgow, Scotland, UK
   - Yingjia (Leo) Gao, The University of Glasgow, Scotland, UK
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/danielebarbera/">Daniele Barbera</a>, Advanced Forming Research Centre, Scotland, UK
+  - Ananya Bijaya, The University of Glasgow, Scotland, UK
 
 \section mofem_users_modules_past_contributors Past Contributors
 
